--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint", 
+    "lint": "next lint",
     "db:seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0", 
-    "@radix-ui/react-dialog": "^1.1.1", 
-    "@radix-ui/react-label": "^2.1.0", 
-    "@radix-ui/react-scroll-area": "^1.1.0", 
-    "@radix-ui/react-slot": "^1.1.0", 
-    "@supabase/ssr": "^0.4.0", 
-    "@supabase/supabase-js": "^2.44.4", 
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/ssr": "^0.4.0",
+    "@supabase/supabase-js": "^2.44.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",  
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
+    "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.1",
@@ -31,8 +32,7 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
-    
-    "@tailwindcss/postcss": "^4.0.0-alpha.16", 
+    "@tailwindcss/postcss": "^4.0.0-alpha.16",
     "@types/node": "^20.14.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -42,6 +42,6 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.6",
     "tsx": "^4.16.2",
-    "typescript": "^5.5.4" 
+    "typescript": "^5.5.4"
   }
 }
