--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "next-level-ecommerce",
   "version": "0.1.0",
@@ -8,6 +9,9 @@
     "start": "next start",
     "lint": "next lint",
     "db:seed": "tsx scripts/seed.ts"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -25,6 +29,7 @@
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "tailwindcss": "3.4.6",
     "react-hook-form": "^7.52.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
